src/agent_tree/tests/snapshots/dispatch_tui__agent_tree__tests__render__collapsed_directory_full_sum.snap
---
source: src/agent_tree/tests/render.rs
expression: out
---
┌ dispatch ──────────────────────────────────────┐
│▶ src +52 -10                                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
