src/agent_tree/tests/snapshots/dispatch_tui__agent_tree__tests__render__counts_alongside_badge.snap
---
source: src/agent_tree/tests/render.rs
expression: out
---
┌ task ────────────────────────────────────────────────────┐
│    a.rs [Modified] +2 -1                                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
