src/agent_tree/tests/snapshots/dispatch_tui__agent_tree__tests__render__file_row_line_counts.snap
---
source: src/agent_tree/tests/render.rs
expression: out
---
┌ task ────────────────────────────────────────────────────┐
│    a.rs [Modified] +12 -3                                │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
