src/agent_tree/tests/snapshots/dispatch_tui__agent_tree__tests__render__snapshot_empty_tree_shows_bare_title.snap
---
source: src/cli/agent_tree.rs
expression: rendered
---
┌ dispatch ──────────────────────────────────────┐
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
