src/agent_tree/tests/snapshots/dispatch_tui__agent_tree__tests__render__snapshot_nested_directories_auto_expanded.snap
---
source: src/cli/agent_tree.rs
expression: rendered
---
┌ dispatch ──────────────────────────────────────┐
│▼ a/b                                           │
│      c.rs [Modified]                           │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
