src/agent_tree/tests/snapshots/dispatch_tui__agent_tree__tests__render__snapshot_notice_is_shown_in_the_bottom_border.snap
---
source: src/cli/agent_tree.rs
expression: rendered
---
┌ dispatch ──────────────────────────────────────┐
│    a.rs [Added]                                │
│    z.rs [Modified]                             │
│▼ src                                           │
│      lib.rs [Modified]                         │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└ could not split the diff pane ─────────────────┘
