src/agent_tree/tests/snapshots/dispatch_tui__agent_tree__tests__render__summed_line_counts.snap
---
source: src/agent_tree/tests/render.rs
expression: out
---
┌ task ────────────────────────────────────────────────────┐
│▼ src +17 -4                                              │
│      a.rs [Modified] +12 -3                              │
│      b.rs [Added] +5 -1                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
